--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "particles.js": "^2.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-tsparticles": "^2.12.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
